; ModuleID = '/home/carl/AnghaBench/mpv/audio/out/extr_ao_wasapi.c_thread_wakeup.c'
source_filename = "/home/carl/AnghaBench/mpv/audio/out/extr_ao_wasapi.c_thread_wakeup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ao = type { %struct.wasapi_state* }
%struct.wasapi_state = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @thread_wakeup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @thread_wakeup(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.ao*, align 8
  %4 = alloca %struct.wasapi_state*, align 8
  store i8* %0, i8** %2, align 8
  %5 = load i8*, i8** %2, align 8
  %6 = bitcast i8* %5 to %struct.ao*
  store %struct.ao* %6, %struct.ao** %3, align 8
  %7 = load %struct.ao*, %struct.ao** %3, align 8
  %8 = getelementptr inbounds %struct.ao, %struct.ao* %7, i32 0, i32 0
  %9 = load %struct.wasapi_state*, %struct.wasapi_state** %8, align 8
  store %struct.wasapi_state* %9, %struct.wasapi_state** %4, align 8
  %10 = load %struct.wasapi_state*, %struct.wasapi_state** %4, align 8
  %11 = getelementptr inbounds %struct.wasapi_state, %struct.wasapi_state* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @SetEvent(i32 %12)
  ret void
}

declare dso_local i32 @SetEvent(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
